2012-03-28 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3512425 ] SequenceContext needs to be set at startup

2012-03-26  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c:
	[ 3498496 ] sfcb hangs and fails to respond to CIM requests

2012-03-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 3506306 ] Fix count for InvokeMethod requests

2012-03-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c:
	[ 3504607 ] CMPIRole Support in brokerUpc

2012-03-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3367363 ] Add CMPIRole Support (init Role to NULL)

2012-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, cimXmlOps.y, cimXmlParser.h, cimXmlRequest.c,
	  cimXmlRequest.h, cimcClientSfcbLocal.c, httpAdapter.c, providerDrv.c,
	  providerMgr.c, providerMgr.h, sfcBasicPAMAuthentication.c:
	[ 3367363 ] Add CMPIRole Support

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3367361 ] Allow for releasing auth handle after CIM request completes

2012-03-08  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* brokerUpc.c:
	[ 3497209 ] oom panic: out of memory using fsp indprovider

2012-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 3499930 ] Check file repository writes

2012-03-08 Narasimha Sharoff <nsharoff@us.ibm.com>

	* objectImpl.c:
	[ 3471814 ] segfault in objectImpl.c:131,ClObjectGetClString
        (Patch by Chris Buccella and Narasimha Sharoff)

2012-03-07 Dave Heller <hellerda@us.ibm.com>

	* httpAdapter.c:
	[ 3498719 ] Better SSL error reporting for sfcb

2012-03-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassthroughProvider.c:
	[ 3426027 ] cimAccountPassThrough does not set return code

	* interopProvider.c, indCIMXMLHandler.c, test/xmltest/LD_modify*:
	[ 3498932 ] Implement ModifyInstance for CIM_ListenerDestination

2012-03-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c: