@@ -1,6 +1,6 @@
 
 /*
- * $Id: cimXmlRequest.c,v 1.68 2012/03/26 19:39:36 buccella Exp $
+ * $Id: cimXmlRequest.c,v 1.69 2012/03/28 15:44:30 buccella Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -2238,7 +2238,6 @@ static RespSegments getProperty(CimXmlRequestContext * ctx, RequestHdr * hdr)
    CMPIData data;
    CMPIStatus rc;
    UtilStringBuffer *sb;
-   CMPIString *tmpString = NewCMPIString(NULL, NULL);
    int irc;
    BinRequestContext binCtx;
    BinResponseHdr *resp;
@@ -2276,8 +2275,7 @@ static RespSegments getProperty(CimXmlRequestContext * ctx, RequestHdr * hdr)
          inst = relocateSerializedInstance(resp->object[0].data);
          sb = UtilFactory->newStrinBuffer(1024);
          data = inst->ft->getProperty(inst, req->name, NULL);
-         data2xml(&data, NULL, tmpString, NULL, NULL, 0, NULL, 0, sb, NULL, 0, 0);
-         CMRelease(tmpString);
+         value2xml(data, sb, 1);
          rsegs=iMethodResponse(hdr, sb);
      if (resp) {
        free(resp);
@@ -2289,10 +2287,8 @@ static RespSegments getProperty(CimXmlRequestContext * ctx, RequestHdr * hdr)
       if (resp) {
     free(resp);
       }
-      CMRelease(tmpString);
       _SFCB_RETURN(rs);
    }
-   CMRelease(tmpString);
    closeProviderContext(&binCtx);
 
    _SFCB_RETURN(ctxErrResponse(hdr, &binCtx,0));
