@@ -59,6 +59,7 @@ Bugs fixed:
 - 3506306 Fix count for InvokeMethod requests
 - 3498496 sfcb hangs and fails to respond to CIM requests
 - 3512425 SequenceContext needs to be set at startup
+- 3510458 Malformed XML response to GetProperty
 
 Changes in 1.3.13
 =================
